# PackingSolver

./: CMakeLists.txt  README.md  main.cpp
PackingSolver/: CMakeLists.txt  heuristic.hpp  instance.cpp  instance.hpp  search.hpp  solution.cpp  solution.hpp
